result/log/build.log
../flash.c: In function ‘flashcard_menu’:
../flash.c:17:7: warning: implicit declaration of function ‘userInputN’ [-Wimplicit-function-declaration]
  stop=userInputN("단어를 반복출력할 시간을 입력하세요:",1); 
       ^
../flash.c:19:6: warning: implicit declaration of function ‘userInputS’ [-Wimplicit-function-declaration]
  day=userInputS(0,"파일명(일차):",1);
      ^
../flash.c:19:5: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  day=userInputS(0,"파일명(일차):",1);
     ^
../flash.c: In function ‘flashcard’:
../flash.c:32:11: warning: implicit declaration of function ‘WListLen’ [-Wimplicit-function-declaration]
  int len= WListLen(now->id);
           ^
../flash.c:58:7: error: ‘j’ undeclared (first use in this function)
   for(j=0;j<3;j++){
       ^
../flash.c:58:7: note: each undeclared identifier is reported only once for each function it appears in
../hangman.c: In function ‘hangman_menu’:
../hangman.c:16:8: warning: implicit declaration of function ‘userInputS’ [-Wimplicit-function-declaration]
  day = userInputS(0, "파일명(일차) : ", 1);
        ^
../hangman.c:16:6: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  day = userInputS(0, "파일명(일차) : ", 1);
      ^
../hangman.c: In function ‘hangman’:
../hangman.c:36:8: warning: implicit declaration of function ‘WListLen’ [-Wimplicit-function-declaration]
  len = WListLen(now->id);
        ^
../hangman.c:46:20: warning: passing argument 1 of ‘getNthWPtr’ makes integer from pointer without a cast [-Wint-conversion]
  word = getNthWPtr(now->id,4);
                    ^
../SSUpreme.h:31:7: note: expected ‘int’ but argument is of type ‘char *’
 Word* getNthWPtr(int Wbn, int Wn);
       ^
../hangman.c:60:3: warning: implicit declaration of function ‘gotoxy’ [-Wimplicit-function-declaration]
   gotoxy(0,20);
   ^
../hangman.c:61:12: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
   userinput=userInputS(1,"입력 : ", 1);
            ^
../hangman.c:84:22: warning: implicit declaration of function ‘getch’ [-Wimplicit-function-declaration]
    while( ( breakC = getch() ) != 'q' && breakC != 'Q' ) ;
                      ^
../kijeong.c: In function ‘menu’:
../kijeong.c:55:18: warning: implicit declaration of function ‘userInputN’ [-Wimplicit-function-declaration]
         choice = userInputN("번호를 입력하세요 : ", 1);
                  ^
../kijeong.c:68:39: warning: implicit declaration of function ‘getch’ [-Wimplicit-function-declaration]
                     while( ( breakC = getch() ) != 'q' && breakC != 'Q' );
                                       ^
../kijeong.c:76:21: warning: implicit declaration of function ‘gets’ [-Wimplicit-function-declaration]
                     gets(buf);
                     ^
../kijeong.c:80:25: warning: implicit declaration of function ‘writeWbFILE’ [-Wimplicit-function-declaration]
                         writeWbFILE(tmpWb);
                         ^
../kijeong.c:96:21: warning: implicit declaration of function ‘insertWList’ [-Wimplicit-function-declaration]
                     insertWList(tmpWb->wHead, tmpW);
                     ^
../kijeong.c: In function ‘makeDic’:
../kijeong.c:143:5: warning: implicit declaration of function ‘addWbList’ [-Wimplicit-function-declaration]
     addWbList(Wbnew);
     ^
../machugi.c: In function ‘machugi_menu’:
../machugi.c:19:8: warning: implicit declaration of function ‘userInputS’ [-Wimplicit-function-declaration]
  day = userInputS(0, "파일명(일차) : ", 1);
        ^
../machugi.c:19:6: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
  day = userInputS(0, "파일명(일차) : ", 1);
      ^
../machugi.c:37:7: warning: implicit declaration of function ‘userInputN’ [-Wimplicit-function-declaration]
  type=userInputN("출력방식(알파벳  순서대로:1, 무작위:2)", 1);
       ^
../machugi.c: In function ‘machugi’:
../machugi.c:49:11: warning: implicit declaration of function ‘WListLen’ [-Wimplicit-function-declaration]
  int len= WListLen(now->id);
           ^
../machugi.c:80:6: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
   ans=userInputS(0,"", 1);
      ^
../machugi.c:84:11: warning: implicit declaration of function ‘getch’ [-Wimplicit-function-declaration]
    while( getch() != '\n' ) ;
           ^
